--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 dj-rest-auth==2.2.7
 Django==4.1.4
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 drf-yasg==1.21.4
 idna==3.4
